# WALJU

./: .gitignore  README.md  SETUP_GUIDE.md  SETUP_GUIDE_EN.md  kill_pipeline.sh  run_pipeline.sh  run_scenarios.sh
assets/: fastdds_udp_only.xml  sim_camerainfo.txt  sim_intrinsics.txt  sim_intrinsics_512.txt  sim_slam_settings.yaml  sim_slam_settings_512.yaml
config/: dependencies_info.md  foundation_stereo_py312_env.yml  ros2_dependencies.txt
docs/: depth_node_guide.md  nav2_stack_guide.md  nvblox_node_guide.md  orb_slam3_node_guide.md
patches/: ORB-SLAM3.patch  isaac_ros_nvblox_custom.patch
scripts/: analyze_nav_metrics.py  trim_and_compress_video.sh
src/foundation_stereo_ros2/: CMakeLists.txt  package.xml
src/foundation_stereo_ros2/config/: params.yaml
src/foundation_stereo_ros2/foundation_stereo_ros2/: __init__.py
src/foundation_stereo_ros2/launch/: depth.launch.py
src/foundation_stereo_ros2/scripts/: depth_node.py
src/nvblox_integration/: CMakeLists.txt  package.xml
src/nvblox_integration/config/: custom_example.rviz  dataset_nav2.yaml  nav2_costmap.yaml  nav2_visualization.rviz  nvblox_custom.yaml  nvblox_visualization.rviz  sim_nav2.yaml
src/nvblox_integration/config/bt/: navigate_w_slow_replanning.xml
src/nvblox_integration/config/nav2/: nav2_params.yaml
src/nvblox_integration/launch/: full_navigation.launch.py  full_pipeline.launch.py  nav2_bringup.launch.py  nvblox.launch.py  sim_nav2.launch.py
src/nvblox_integration/nvblox_integration/: __init__.py  goal_pose_corrector.py  goal_reached_stop.py  initial_rotation_controller.py
src/nvblox_integration/scripts/: generate_nav2_params.py  goal_sender.py  ground_truth_publisher.py  navigation_metrics_logger.py  pose_comparison_plot.py  print_rviz_goal.py
src/orb_slam3_ros2/: CMakeLists.txt  package.xml
src/orb_slam3_ros2/config/: stereo_lusnr.yaml
src/orb_slam3_ros2/launch/: dataset_test.launch.py  slam_only.launch.py
src/orb_slam3_ros2/scripts/: tf_gt_relay.py
src/orb_slam3_ros2/src/: dataset_publisher_node.cpp  stereo_slam_node.cpp
